<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name_movie"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers"
            android:textSize="25sp"
            android:ellipsize="end"
            android:lines="1"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <TextView
            android:id="@+id/date"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/_01_05_2021"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:ellipsize="end"
            android:lines="1"
            android:layout_marginEnd="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="120dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/about"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_btn"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/forbutton"
            android:text="@string/edit"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_btn"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/forbutton"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@id/edit_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E5E5E5"/>
</LinearLayout>