<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="40dp"
    android:paddingTop="60dp"
    android:paddingEnd="40dp"
    android:paddingBottom="60dp"
    tools:context=".SaveActivity">
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/save_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/foredit"
        android:hint="@string/movie_name"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toTopOf="@id/save_authors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/save_authors"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/foredit"
        android:hint="@string/movie_authors"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toTopOf="@id/save_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/save_about"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/foredit"
        android:gravity="top"
        android:hint="@string/about_movie"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toTopOf="@id/save_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_authors" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/save_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/foredit"
        android:hint="@string/movie_date"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toTopOf="@id/save_btn1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_about" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn1"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/forbutton"
        android:text="save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_date" />

</androidx.constraintlayout.widget.ConstraintLayout>